# for-spi

./: About.html  CMakeLists.txt  CMakeLists.txt  # (edit to add test target)  README.md  Survey from.html  shirt order from.html  test.cpp  test.css  test.html
tests/: hello_test.cpp  hello_test.cpp  # (already exists, ensure it contains a hello world test)
ux/: ui.html  warehouse.html
